[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rich-kids-of-tao"
version = "1.0.0"
description = "Rich Kids of TAO - The ultimate proof-of-wealth Bittensor subnet"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Rich Kids of TAO", email = "tobybespoke@gmail.com"}
]
dependencies = [
    "bittensor==9.9.0",
    "numpy",
]

[tool.setuptools]
packages = ["rich_kids_of_tao"]
